# holoctl

./: .gitattributes  .gitignore  .npmignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MORNING-REPORT.md  README.md  README.pt-br.md  SANITY-0.10.txt  SANITY-0.11.txt  SANITY-0.12.txt  SANITY-0.13.txt  SANITY-0.14.txt  SECURITY.md  eslint.config.js  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.claude/agents/: architect.md  developer.md  researcher.md  reviewer.md
.claude/commands/: board.md  close.md  decision.md  sprint.md  status.md  ticket.md
.devin/skills/board/: SKILL.md
.devin/skills/close/: SKILL.md
.devin/skills/decision/: SKILL.md
.devin/skills/sprint/: SKILL.md
.devin/skills/status/: SKILL.md
.devin/skills/ticket/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.holoctl/: config.json  instructions.md
.holoctl/agents/: developer.md  researcher.md
.holoctl/board/: WORKFLOW.md  index.json
.holoctl/board/tickets/: TST-001-migrar-para-python.md  _template.md
.holoctl/commands/: board.md  close.md  decision.md  sprint.md  status.md  ticket.md
.holoctl/context/: conventions.md  objective.md
.projhub/: activity.jsonl  config.json  instructions.md
.projhub/agents/: architect.md  developer.md  reviewer.md
.projhub/board/: WORKFLOW.md  index.json
.projhub/board/tickets/: TST-001-migrar-para-python.md  _template.md
.projhub/commands/: board.md  close.md  decision.md  sprint.md  status.md  ticket.md
.projhub/context/: architecture.md
docs/: README.pt-br.md  pre-commit-config.example.yaml
docs/reviews/: 2026-06-09-code-review.md  2026-06-09-frontend-review.md  2026-06-09-improvement-plan.md
docs/superpowers/plans/: 2026-05-26-dashboard-render-rebuild-editorial.md
docs/superpowers/specs/: 2026-05-26-dashboard-render-rebuild-editorial-design.md
holoctl/: CHANGELOG.md  __init__.py  __main__.py
holoctl/cli/: adopt.py  agent.py  board.py  boot.py  compile_.py  coverage.py  curate.py  doctor.py  handoff.py  init_.py  journal.py  memory.py  overview.py  provider.py  repo.py  serve.py  setup.py  setup_global.py  sync_.py  upgrade_.py
holoctl/lib/: agent_library.py  board.py  board_body.py  board_tree.py  changelog.py  config.py  curator.py  discover.py  ecosystem.py  filetree.py  git.py  journal.py  jsonl.py  markdown.py  mcp_config.py  memory.py  metrics.py  templates.py  ticket.py
holoctl/lib/board/: __init__.py  create.py  markdown_sync.py  ops.py  store.py  validate.py
holoctl/lib/compiler/: __init__.py  _safe_write.py  agents.py  claude.py  codex.py  copilot.py  cursor.py  devin.py  generic.py  hooks_emit.py  manifest.py  mcp_emit.py  memory_emit.py  template.py  windsurf.py
holoctl/lib/curator_rules/: __init__.py  library_persona_match.py  repeated_glob_edits.py  repeated_prompt.py  unused_topic.py  windsurf_memory_promote.py
holoctl/server/: app.py  filters.py  jinja.py  markdown.py  mcp.py  paths.py  projects.py
holoctl/server/routes/: __init__.py  home.py  project_board.py  project_detail.py  project_doc.py  project_meta.py  project_metrics.py  workspace_metrics.py
holoctl/server/static/: holoctl-ui.js  holoctl.css
holoctl/server/templates/: base.html  home.html  metrics.html
holoctl/server/views/: __init__.py  avatars.py  board.py  card.py  dates.py  detail.py  doc.py  home.py  list.py  meta.py  metrics.py  timeline.py  tree.py  workspace_summary.py
holoctl/templates/: instructions.md
holoctl/templates/agents/: agent-designer.md  architect.md  boardmaster.md  dba.md  developer.md  devops.md  researcher.md  reviewer.md  security-auditor.md  tech-writer.md
holoctl/templates/board/: WORKFLOW.md  _template.md
holoctl/templates/commands/: agent-new.md  board.md  close.md  decision.md  hctl-upgrade-claude.md  hctl-upgrade-copilot.prompt.md  hctl-upgrade-cursor.md  hctl-upgrade-devin.md  hctl-upgrade-windsurf.md  holoctl-claude.md  holoctl-copilot.prompt.md  holoctl-cursor.md  holoctl-devin.md  holoctl-windsurf.md  spec.md  sprint.md  status.md  ticket.md
holoctl/templates/context/: objective.md
holoctl/templates/hooks/: claude_settings.json  cursor_hooks.json
projctl/: __init__.py  __main__.py
projctl/cli/: _console.py  agent.py  board.py  compile_.py  doctor.py  init_.py  repo.py  serve.py  setup_global.py  sync_.py  workspace.py
projctl/lib/: board.py  config.py  filetree.py  git.py  templates.py  workspace.py
projctl/lib/compiler/: __init__.py  claude.py  copilot.py  cursor.py  generic.py  windsurf.py
projctl/server/: app.py
projhub/: __init__.py  __main__.py
projhub/cli/: agent.py  board.py  compile_.py  doctor.py  init_.py  overview.py  repo.py  serve.py  setup_global.py  sync_.py  workspace.py
projhub/lib/: board.py  config.py  filetree.py  templates.py  workspace.py
projhub/server/: app.py
scripts/: postinstall.js  test.mjs  validate_changelog.py
src/cli/: index.js
src/lib/: board.js  board.test.js  config.js  discover.js  discover.test.js  filetree.js  git.js  markdown.js  workspace.js
src/server/: index.js
src/templates/: index.js
tests/: conftest.py  test_adopt.py  test_agent_library.py  test_agent_suggest_v017.py  test_batch.py  test_board.py  test_board_cache.py  test_board_cli.py  test_board_concurrency.py  test_board_module_split.py  test_board_tree.py  test_body_builder.py  test_boot.py  test_changelog.py  test_changelog_validate.py  test_codex_parity.py  test_compile_drift_cross_target.py  test_compile_drift_defense.py  test_compile_drift_doctor.py  test_compile_incremental.py  test_compile_manifest.py  test_config.py  test_curator.py  test_dashboard.py  test_discover.py  test_discover_generic.py  test_doctor_ecosystem.py  test_foreign_drift.py  test_frontmatter_roundtrip.py  test_git.py  test_handoff.py  test_hooks_emit.py  test_init_idempotent.py  test_init_neutral.py  test_journal.py  test_jsonl.py  test_manifest.py  test_markdown.py  test_markdown_xss.py  test_mcp_config.py  (+20 more)
(+161 files in other folders)
