[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "holoctl"
version = "0.18.1"
description = "Universal project operating system for AI coding assistants"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Felipe Carillo" }]
keywords = [
  "ai", "project-management", "kanban", "claude-code", "copilot",
  "codex", "aider", "agents", "cli",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Environment :: Web Environment",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyyaml>=6",
    "jinja2>=3.1",
]

[project.optional-dependencies]
ml = [
    # Optional embeddings backend for the curator's repeated-prompt rule.
    # Without this extra the curator falls back to token-hash matching
    # (catches near-exact repeats, misses paraphrase). With it, paraphrased
    # prompts are detected via cosine similarity on local embeddings.
    # We use fastembed (ONNX) instead of sentence-transformers (torch) —
    # ~250MB total instead of ~700MB, and same model: all-MiniLM-L6-v2.
    "fastembed>=0.4",
]

[project.scripts]
holoctl = "holoctl.__main__:app"
hctl = "holoctl.__main__:app"

[project.urls]
Homepage = "https://github.com/FelipeCarillo/holoctl"
Repository = "https://github.com/FelipeCarillo/holoctl"

[tool.setuptools.packages.find]
where = ["."]
include = ["holoctl*"]

[tool.setuptools.package-data]
holoctl = [
    "templates/commands/*.md",
    "templates/agents/*.md",
    "templates/hooks/*.json",
    "templates/skills/**/*",
    "server/static/**/*",
    "server/templates/**/*.html",
    "server/templates/**/*.svg",
    "CHANGELOG.md",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8",
    # Required by fastapi.testclient (used by tests/test_dashboard.py).
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
