[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "holoctl"
version = "0.20.0"
description = "Project operating system for Claude Code, with a portable bootstrap for other AI assistants"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Felipe Carillo" }]
keywords = [
  "ai", "project-management", "kanban", "claude-code", "agents", "cli",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Environment :: Web Environment",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
]

[project.optional-dependencies]
dashboard = [
    # The HTTP dashboard (`hctl serve`). Kept out of the lean core so a
    # CLI-only / MCP-only install (the common case) doesn't pull the whole
    # web stack (fastapi → pydantic → starlette, plus uvicorn + jinja2).
    # `hctl serve` prints an install hint when this extra is absent.
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]
ml = [
    # Optional embeddings backend for the curator's repeated-prompt rule.
    # Without this extra the curator falls back to token-hash matching
    # (catches near-exact repeats, misses paraphrase). With it, paraphrased
    # prompts are detected via cosine similarity on local embeddings.
    # We use fastembed (ONNX) instead of sentence-transformers (torch) —
    # ~250MB total instead of ~700MB, and same model: all-MiniLM-L6-v2.
    "fastembed>=0.4",
]

[project.scripts]
holoctl = "holoctl.__main__:app"
hctl = "holoctl.__main__:app"

[project.urls]
Homepage = "https://github.com/FelipeCarillo/holoctl"
Repository = "https://github.com/FelipeCarillo/holoctl"

[tool.setuptools.packages.find]
where = ["."]
include = ["holoctl*"]

[tool.setuptools.package-data]
holoctl = [
    "templates/commands/*.md",
    "templates/agents/*.md",
    "templates/hooks/*.json",
    "templates/skills/**/*",
    "server/static/**/*",
    "server/templates/**/*.html",
    "server/templates/**/*.svg",
    "CHANGELOG.md",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8",
    # Required by fastapi.testclient (used by tests/test_dashboard.py).
    "httpx>=0.27",
    # The dashboard moved to the optional `[dashboard]` extra; the dev env
    # still needs it so tests/test_dashboard.py can import + exercise it.
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    # Linter + type checker (correctness nets — see [tool.ruff] / [tool.mypy]).
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Focused, high-signal set: pyflakes (dead code, bad f-strings) + bugbear
# (likely-bug patterns). Stylistic rules (E7 semicolons, line length) are
# left off deliberately to keep the linter about correctness, not formatting.
select = ["F", "B"]
ignore = [
    # typer / FastAPI REQUIRE the call-in-default pattern
    # (`x: T = typer.Option(...)`, `Body(...)`); B008 is a false positive here.
    "B008",
    # The CLI deliberately re-raises `typer.Exit` inside `except` blocks without
    # `from`; chaining would leak tracebacks into user-facing output.
    "B904",
]

[tool.ruff.lint.per-file-ignores]
# Tests use throwaway bindings and import-for-side-effect patterns freely.
"tests/*" = ["F841", "B007"]

[tool.mypy]
python_version = "3.11"
# Lenient by design: a cheap regression net for obvious type errors, not a
# strict gate. CI runs it on the core (`holoctl/lib`, `holoctl/cli`); the
# FastAPI dashboard (`holoctl/server/app.py` + routes/views) is dynamically
# typed and intentionally out of scope (it's only reachable via a lazy import).
ignore_missing_imports = true
