[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "holoctl"
version = "0.20.4"
description = "Project operating system for Claude Code, with a portable bootstrap for other AI assistants"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Felipe Carillo" }]
keywords = [
  "ai", "project-management", "kanban", "claude-code", "agents", "cli",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Environment :: Web Environment",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    # The HTTP dashboard (`hctl serve`) ships with the base install — no extra
    # to remember. The web stack is only IMPORTED when the dashboard actually
    # starts (uvicorn loads holoctl.server.app by string reference), so CLI /
    # MCP cold-start stays lean; tests/test_serve_dashboard_extra.py guards
    # that importing the CLI never pulls fastapi/uvicorn/jinja2/starlette.
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
]

[project.optional-dependencies]
# Deprecated no-op kept for compatibility: the dashboard deps moved into the
# base dependencies, but `pip install 'holoctl[dashboard]'` (older docs,
# scripts, muscle memory) must keep working instead of warning/failing.
dashboard = []
ml = [
    # Optional embeddings backend for the curator's repeated-prompt rule.
    # Without this extra the curator falls back to token-hash matching
    # (catches near-exact repeats, misses paraphrase). With it, paraphrased
    # prompts are detected via cosine similarity on local embeddings.
    # We use fastembed (ONNX) instead of sentence-transformers (torch) —
    # ~250MB total instead of ~700MB, and same model: all-MiniLM-L6-v2.
    "fastembed>=0.4",
]

[project.scripts]
holoctl = "holoctl.__main__:app"
hctl = "holoctl.__main__:app"

[project.urls]
Homepage = "https://github.com/FelipeCarillo/holoctl"
Repository = "https://github.com/FelipeCarillo/holoctl"

[tool.setuptools.packages.find]
where = ["."]
include = ["holoctl*"]

[tool.setuptools.package-data]
holoctl = [
    "templates/commands/*.md",
    "templates/agents/*.md",
    "templates/hooks/*.json",
    "templates/skills/**/*",
    "server/static/**/*",
    "server/templates/**/*.html",
    "server/templates/**/*.svg",
    "CHANGELOG.md",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8",
    # Parallel test execution (`pytest -n auto`) — the suite is CPU-light and
    # filesystem-isolated (each test gets its own tmp_path), so it parallelizes
    # cleanly with a large speedup.
    "pytest-xdist>=3.5",
    # Coverage reporting (`--cov=holoctl`). No fail-under gate yet — measuring first.
    "pytest-cov>=5",
    # Per-test timeout guard so a hung test fails loudly instead of stalling CI.
    "pytest-timeout>=2.1",
    # Required by fastapi.testclient (used by tests/test_dashboard.py).
    # The web stack itself (fastapi/uvicorn/jinja2/markdown-it) now comes with
    # the base dependencies — no dev-group duplication needed.
    "httpx>=0.27",
    # Linter + type checker (correctness nets — see [tool.ruff] / [tool.mypy]).
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# --timeout=60: no single test may run longer than 60s (catches hangs/deadlocks).
# --durations=10: report the 10 slowest tests so we can keep the suite fast.
addopts = "-q --timeout=60 --durations=10"
markers = [
    # Opt-in marker for tests that must NOT run in parallel (shared global state,
    # port binding, etc.). Apply with `@pytest.mark.serial` and run those under
    # `-p no:xdist` or `--dist no` if a future test needs strict serialization.
    # No test currently needs it — the suite passes cleanly under `-n auto`.
    "serial: mark a test that must run serially (not under pytest-xdist parallelism)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
# Match the linter's line-length and the project's existing style. Enabled as a
# CI *warning* (non-blocking) for now — the existing tree is not yet formatted,
# and a repo-wide reformat is deferred to avoid churn/merge conflicts. New code
# is auto-formatted via the pre-commit hook.
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
# Focused, high-signal set: pyflakes (dead code, bad f-strings) + bugbear
# (likely-bug patterns). Stylistic rules (E7 semicolons, line length) are
# left off deliberately to keep the linter about correctness, not formatting.
select = ["F", "B"]
ignore = [
    # typer / FastAPI REQUIRE the call-in-default pattern
    # (`x: T = typer.Option(...)`, `Body(...)`); B008 is a false positive here.
    "B008",
    # The CLI deliberately re-raises `typer.Exit` inside `except` blocks without
    # `from`; chaining would leak tracebacks into user-facing output.
    "B904",
]

[tool.ruff.lint.per-file-ignores]
# Tests use throwaway bindings and import-for-side-effect patterns freely.
"tests/*" = ["F841", "B007"]

[tool.mypy]
python_version = "3.11"
# Lenient by design: a cheap regression net for obvious type errors, not a
# strict gate. CI runs it on the core (`holoctl/lib`, `holoctl/cli`); the
# FastAPI dashboard (`holoctl/server/app.py` + routes/views) is dynamically
# typed and intentionally out of scope (it's only reachable via a lazy import).
ignore_missing_imports = true
